uppdate to options page.

--- a/options.html
+++ b/options.html
@@ -6,8 +6,10 @@
     <body>
         <div id="buttonDiv">
         </div>
-        <div>
+        <>
             <p>Choose a different background color!</p>
+            <br>
+            <p>Or Don't!</p>
         </div>
         <script src="options.js"></script>
     </body>
